--- a/Style/index.css
+++ b/Style/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-html, body,  header,img, div, section,  input, button,  p, h1, h2, h3, ul, li { 
+html, body,  header,img, div, section,  input, button,  p, h1, h2, ul, li { 
     margin: 0;
     padding: 0;
     border: none;
